--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Roboto Mono
-bold_font        Roboto Mono Bold
-italic_font      Roboto Mono Itatlic
-bold_italic_font Roboto Mono Bold Italic
+font_family      Fira Code Regular Nerd Font Complete Mono
+bold_font        Fira Code Medium Nerd Font Complete Mono
+italic_font      Fira Code Medium Nerd Font Complete Mono
+bold_italic_font Fira Code Medium Nerd Font Complete Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -47,8 +47,8 @@ font_size 14.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  0
-# adjust_column_width 0
+adjust_line_height  105%
+# adjust_column_width 108%
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -377,7 +377,7 @@ enable_audio_bell no
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-visual_bell_duration 0.0
+visual_bell_duration 0
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
