--- a/kitty/fedora/kitty.conf
+++ b/kitty/fedora/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      RobotoMono Nerd Font Mono
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      Fira Code Regular Nerd Font Complete Mono
+bold_font        Fira Code Medium Nerd Font Complete Mono
+italic_font      Fira Code Medium Nerd Font Complete Mono
+bold_italic_font Fira Code Medium Nerd Font Complete Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -47,8 +47,8 @@ font_size 14.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  115%
-adjust_column_width 90%
+adjust_line_height  105%
+# adjust_column_width 90%
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
