--- a/kitty/fedora/kitty.conf
+++ b/kitty/fedora/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Regular Nerd Font Complete Mono
-bold_font        Fira Code Medium Nerd Font Complete Mono
-italic_font      Fira Code Medium Nerd Font Complete Mono
-bold_italic_font Fira Code Medium Nerd Font Complete Mono
+font_family      JetBrains Mono Regular Nerd Font Complete Mono
+bold_font        JetBrains Mono Bold Nerd Font Complete Mono
+italic_font      JetBrains Mono Italic Nerd Font Complete Mono
+bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -47,7 +47,7 @@ font_size 14.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  105%
+adjust_line_height  108%
 # adjust_column_width 90%
 
 #: Change the size of each character cell kitty renders. You can use
