--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -6,10 +6,15 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono Regular Nerd Font Complete Mono
-bold_font        JetBrains Mono Bold Nerd Font Complete Mono
-italic_font      JetBrains Mono Italic Nerd Font Complete Mono
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
+#font_family      JetBrains Mono Regular Nerd Font Complete Mono
+#bold_font        JetBrains Mono Bold Nerd Font Complete Mono
+#italic_font      JetBrains Mono Italic Nerd Font Complete Mono
+#bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
+
+font_family      JetBrainsMonoNerdFontCompleteM-Regular
+bold_font        JetBrainsMonoNerdFontCompleteM-Bold
+italic_font      JetBrainsMonoNerdFontCompleteM-Italic
+bold_italic_font JetBrainsMono-Nerd-Font-Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -57,7 +62,7 @@ adjust_line_height  108%
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+symbol_map U+2200-U+22FF,U+2A00-U+2AFF,U+2A00-U+2AFF  JuliaMono-Regular
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -69,7 +74,7 @@ adjust_line_height  108%
 
 #:     symbol_map codepoints Font Family Name
 
-disable_ligatures never
+disable_ligatures cursor
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -944,7 +949,7 @@ background #262626
 #: on both light and dark backgrounds. WARNING: this might make your
 #: mouse cursor invisible on dual GPU machines.
 
-# linux_display_server auto
+linux_display_server wayland
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
